@@ -167,7 +167,11 @@ TAO_Transport::TAO_Transport (CORBA::ULong tag,
   , stats_ (0)
 #endif /* TAO_HAS_TRANSPORT_CURRENT == 1 */
   , flush_in_post_open_ (0)
+  , output_cdr_lock_ (0)
 {
+  ACE_NEW (this->output_cdr_lock_,
+	   ACE_Lock_Adapter <TAO_SYNCH_MUTEX> (this->output_cdr_mutex_));
+
   ACE_NEW (this->messaging_object_,
             TAO_GIOP_Message_Base (orb_core,
                                    this,
@@ -530,6 +534,9 @@ TAO_Transport::handle_output (ACE_Time_Value *max_wait_time)
                   ACE_TEXT ("TAO (%P|%t) - Transport[%d]::handle_output\n"),
                   this->id ()));
     }
+
+  // drain_queue ultimates touches the OutputCDR and hance needs to be synchronized.
+  ACE_GUARD_RETURN (ACE_Lock, ace_mon, *this->output_cdr_lock_, -1);
 
   // The flushing strategy (potentially via the Reactor) wants to send
   // more data, first check if there is a current message that needs
@@ -2632,6 +2639,12 @@ TAO_OutputCDR &
 TAO_Transport::out_stream (void)
 {
   return this->messaging_object ()->out_stream ();
+}
+
+ACE_Lock*
+TAO_Transport::output_cdr_lock (void)
+{
+  return this->output_cdr_lock_;
 }
 
 void
