@@ -1,3 +1,15 @@
+Mon Sep  1 20:18:51 UTC 2008  Ciju John  <johnc at ociweb dot com>
+
+        * tao/DynamicInterface/DII_Invocation_Adapter.cpp:
+        * tao/LocateRequest_Invocation.cpp:
+        * tao/Messaging/Asynch_Invocation.cpp:
+        * tao/Synch_Invocation.cpp:
+        * tao/Transport.h:
+        * tao/Transport.cpp:
+          A transport in connecting state can potentially be referenced by
+          multiple concurrent oneway invocations. Transport access needs
+          to be synchronized during invocation.
+
 Fri Aug 29 19:12:49 UTC 2008  Adam Mitz  <mitza@ociweb.com>
 
         * tao/Transport_Connector.cpp (wait_for_connection_completion):
